# forge-ai

./: .env.example  .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-installers.yml  quality-gate.yml  release.yml
docs/: ACCOUNT_API.md  ARCHITECTURE.md  PRIVACY.md  RELEASE.md  SHOWCASE.md
scripts/: build-macos.sh  build-windows.ps1
src/: Account.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  auth.test.ts  auth.ts
