[package]
name = "forge-ai"
version = "1.0.0"
description = "Cross-platform AI provider, runtime, usage and model control center"
authors = ["Tushar"]
edition = "2021"

[lib]
name = "forge_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["process", "time", "fs", "io-util"] }
which = "7"
futures-util = "0.3"
dirs = "6"
once_cell = "1"
